# utfdump

./: .gitignore  Cargo.toml  LICENSE  README.md  data.py  get_data.sh
core/src/: data_store.rs  lib.rs  string_table.rs
lib/: Cargo.toml  build.rs
lib/src/: character.rs  lib.rs  unicode_data.rs  utf8.rs
utfdump/: Cargo.toml
utfdump/src/: lib.rs
utfdump_bin/: Cargo.toml  build.rs
utfdump_bin/src/: main.rs
utfdump_core/: Cargo.toml
utfdump_core/src/: chardata.rs  encoded.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
